# jwt-cli

./: Cargo.toml
src/: cli_config.rs  main.rs  utils.rs
src/translators/: decode.rs  encode.rs
tests/: ec256.pem  ec384.pem  ed25519.pem  main_test.rs
