[package]
name = "jwt-cli"
description = "A super fast CLI tool to decode and encode JWTs built in Rust"
version = "5.0.3"
repository = "https://github.com/mike-engel/jwt-cli"
authors = ["Mike Engel <mike@mike-engel.com>", "Corey McGregor <https://github.com/shousper>", "Aaron Schaef <https://github.com/atschaef>", "Hugh Simpson <https://github.com/hughsimpson>"]
edition = "2021"
license = "MIT"

[[bin]]
name = "jwt"
path = "src/main.rs"
test = true

[dependencies]
clap = { version = "4", features = ["derive"] }
jsonwebtoken = "8"
bunt = "0.2"
serde = "1"
serde_derive = "1"
serde_json = "1"
chrono = "0.4"
parse_duration = "2.1.1"
atty = "0.2"
base64 = "0.21.0"
pkcs8 = { version = "0.10.2", features = ["pem", "std"] }
rsa = "0.9.1"
ecdsa = { version = "0.16.6", features = ["pem"] }
ed25519 = { version = "2.2.1", features = ["pem", "pkcs8"] }
p256 = { version = "0.13.2", features = ["jwk"] }
elliptic-curve = { version = "0.13.4", features = ["jwk"] }
p384 = { version = "0.13.0", features = ["jwk"] }
ed25519-dalek = "1.0.1"
p521 = { version = "0.13.0", features = ["wip-arithmetic-do-not-use"] }

[dev-dependencies]
tempdir = "0.3.7"
